kubernetes/weather-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name  : weather-deploy
  labels: 
    app: weather-app
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      project: weather
  template: 
    metadata:
      labels: 
        project: weather
    spec: 
      containers: 
        - name : weather
          image: alexandrafedotova/weather:1
          ports: 
            - containerPort: 5000
