kubernetes/weather-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: weather.p9.do-school.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-service
                port:
                  number: 80
